[project]
name = "cvchecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.136.1",
    "fastembed>=0.8.0",
    "google-genai>=2.6.0",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "pytest>=9.0.3",
    "selectolax>=0.4.9",
]
